2010-03-12  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/cl-macs.el (defsubst*): Add autoload cookie.  (Bug#4427)

2010-03-11  Wilson Snyder  <wsnyder@wsnyder.org>

	* files.el (auto-mode-alist): Accept more verilog file patterns.

2010-03-09  Miles Bader  <miles@gnu.org>>

	* vc-git.el (vc-git-print-log): Use "tformat:" for shortlog,
	instead of "format:"; this ensures that the output is
	newline-terminated.

2010-03-08  Chong Yidong  <cyd@stupidchicken.com>

	* mail/rfc822.el (rfc822-addresses): Use nested catches to ensure
	that all errors are caught, and that the return value is always a
	list (Bug#5692).

2010-03-08  Kenichi Handa  <handa@m17n.org>

	* language/misc-lang.el (windows-1256): New coding system.
	(cp1256): New alias of windows-1256 (bug#5690).

2010-03-07  Andreas Schwab  <schwab@linux-m68k.org>

	* mail/rfc822.el (rfc822-addresses): Move catch clause down around
	call to rfc822-bad-address.  (Bug#5692)

2010-03-07  Štěpán Němec  <stepnem@gmail.com>  (tiny change)

	* vc-git.el (vc-git-annotate-extract-revision-at-line): Use
	vc-git-root as default directory for revision path (Bug#5657).

2010-03-06  Chong Yidong  <cyd@stupidchicken.com>

	* calculator.el (calculator): Don't bind split-window-keep-point
	(Bug#5674).

2010-03-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-git.el: Re-flow to fit into 80 columns.
	(vc-git-after-dir-status-stage, vc-git-dir-status-goto-stage):
	Remove spurious `quote' element in each case alternative.
	(vc-git-show-log-entry): Use prog1.
	(vc-git-after-dir-status-stage): Remove unused var `remaining'.

2010-03-06  Glenn Morris  <rgm@gnu.org>

	* cedet/semantic/grammar.el (semantic-grammar-header-template):
	Update template copyright to GPLv3+.

2010-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* man.el (Man-files-regexp): Tighten up the regexp (bug#5686).

2010-03-03  Chong Yidong  <cyd@stupidchicken.com>

	* macros.el (insert-kbd-macro): Look up keyboard macro using the